--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -61,5 +61,5 @@
          <p>&copy;2020 | Isabel Aranguren | Houston| <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
          <div id="lastUpdated"></div>
       </footer>
-      <script src="js/lastUpdated.js"></script>
+      <script src="../js/lastUpdated.js"></script>
 </html>
