--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,18 +25,18 @@
          <div class="container">
             <div class="box" id="whitespace">
                <figure class="picture">
-                  <img src="assets/apple.png" alt="Apple.com" height="350">
+                  <img src="assets/apple.png" alt="Apple.com">
                   <figcaption> Whitespace demo<a href="https://www.apple.com">Apple.com</a></figcaption>
                </figure>
-               <h1 class="title">Whitespace</h1>
+               <h2 class="title">Whitespace</h2>
                <p class="description"> Apple uses generous amounts of <em>whitespace</em>. This works together with the thin typeface and large font sizes to make sure that 
                   there isn’t too much information on the screen at once. Apple also places imagery strategically to draw the users eye to specific elements down the page.
                </p>
             </div>
             <div class="box" id="visual">
-               <h1 class="title">Visual Hierachy</h1>
+               <h2 class="title">Visual Hierachy</h2>
                <figure class="picture">
-                  <img src="assets/chocolate.png" alt="simplychocolate.dk/" height="350">
+                  <img src="assets/chocolate.png" alt="simplychocolate.dk/">
                   <figcaption>Visual Hierachy Demo<a href="https://simplychocolate.dk/"> SimpliyChocolate</a></figcaption>
                </figure>
                <p class="description"> Simply Chocolate, is a great example of how to use size and scale to emphasize <em>visual hierarchy</em>. The first thing you’re drawn 
@@ -45,9 +45,9 @@
                <br>
             </div>
             <div class="box" id="contrast">
-               <h1 class="title">Contrast</h1>
+               <h2 class="title">Contrast</h2>
                <figure class="picture">
-                  <img src="assets/dropbox.png" alt="Dropbox" height="350">>
+                  <img src="assets/dropbox.png" alt="Dropbox">
                   <figcaption>Contrast Demo<a href="https://www.dropbox.com/"> Dropbox</a></figcaption>
                </figure>
                <p class="description">
@@ -61,5 +61,5 @@
          <p>&copy;2020 | Isabel Aranguren | Houston| <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
          <div id="lastUpdated"></div>
       </footer>
-      <script src="../js/lastUpdated.js"></script>
+      <script src="../lastUpdated.js"></script>
 </html>
