--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,9 +22,9 @@
          </nav>
       </header>
       <main>
-         <div class="container">
-            <div class="box" id="whitespace">
-               <figure class="picture">
+         <div class="cards">
+            <div class="card" id="whitespace">
+               <figure class="picture" >
                   <img src="assets/apple.png" alt="Apple.com">
                   <figcaption> Whitespace demo<a href="https://www.apple.com">Apple.com</a></figcaption>
                </figure>
@@ -33,29 +33,30 @@
                   there isn’t too much information on the screen at once. Apple also places imagery strategically to draw the users eye to specific elements down the page.
                </p>
             </div>
-            <div class="box" id="visual">
-               <h2 class="title">Visual Hierachy</h2>
+            <div class="card" id="visual">
                <figure class="picture">
                   <img src="assets/chocolate.png" alt="simplychocolate.dk/">
                   <figcaption>Visual Hierachy Demo<a href="https://simplychocolate.dk/"> SimpliyChocolate</a></figcaption>
                </figure>
+               <h2 class="title">Visual Hierachy</h2>
                <p class="description"> Simply Chocolate, is a great example of how to use size and scale to emphasize <em>visual hierarchy</em>. The first thing you’re drawn 
                   to in the design is the huge text that explains what the product is all about. This is done in a way that doesn’t detract from the other elements on the screen.
                </p>
-               <br>
             </div>
-            <div class="box" id="contrast">
-               <h2 class="title">Contrast</h2>
+            <div class="card" id="contrast">
                <figure class="picture">
                   <img src="assets/dropbox.png" alt="Dropbox">
                   <figcaption>Contrast Demo<a href="https://www.dropbox.com/"> Dropbox</a></figcaption>
                </figure>
+               <h2 class="title">Contrast</h2>
                <p class="description">
                   Just as color can be applied to typographic headings to create contrast, so can size. The website of Dropbox, uses big headings to catch the 
                   visitor’s attention and draw them in so that they read more of the smaller paragraphs below.
                </p>
             </div>
          </div>
+         <br>
+         <br>
       </main>
       <footer>
          <p>&copy;2020 | Isabel Aranguren | Houston| <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
