--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -11,27 +11,21 @@
 <body>
     <header>
         <img class="logo" src="../icon2.png" height="50px" alt="logo">
-
         <h1>Weather Lot</h1>
     </header>
     <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./target-audience.html">Target Audience</a></li>
-          <li><a href="./lesson3/color-scheme.html">Color Scheme</a></li>
-          <li><a href="./lesson3/typography.html">Typograohy</a></li>
+          <li><a href="./color-scheme.html">Color Scheme</a></li>
+          <li><a href="./typography.html">Typograohy</a></li>
         </ul>
     </nav>
     <main>
         <article>
-            <h2 >The Site Purpose</h2>
-            <p>The purpose of www.weatherlot.com is help to provide weather forecasts, warnings of hazardous weather, 
-                and other weather-related products to organizations and the public for protection, safety, and general information.  
-                All kinds of weather-related announcements will also  be posted, including a gallery of weather-related pictures</p>
-            <h3>Domain name</h3>
-            <ul>
-                <li>www.weatherlot.com</li>
-            </ul>
+            <h2>Color Scheme</h2>
+            <img src="../colorscheme.png" alt="color palette">
+           
             
         </article>
     </main>
