--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../icon2.png" height="50px" alt="logo">
+        <img class="logo" src="./icon2.png" height="50px" alt="logo">
         <h1>Weather Lot</h1>
     </header>
     <nav>
