--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -24,7 +24,7 @@
     <main>
         <article>
             <h2>Color Scheme</h2>
-            <img src="../colorscheme.png" alt="color palette">
+            <img src="./colorscheme.png" alt="color palette">
            
             
         </article>
