--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./icon2.png" height="50px" alt="logo">
-
+        <img class="logo" src="./icon2.png" alt="logo">
         <h1>Weather Lot</h1>
     </header>
     <nav>
@@ -27,7 +26,7 @@
             <h2>Personas</h2>
             <ul>
                 <li>Sofia is a 21 year old  college student. She has a part time job as an assistant manager 15 minutes away from her home. She likes walking from home to her work everyday but hates getting wet. She loves spending time outdoors. She rides her bike at least three times a week and is always looking for new places to bike. She likes to go on activities that allow her spend time with her friends. 
-                </li><br>
+                <br></li>
                 <li>Jake is a 28 year old graphic designer. He works a full time job 45 minutes from his house. He doesn’t have a car so hi has to take the train to work every day. His hobbies include traveling and surfing. </li>
             </ul>
             <h3>Scenarios</h3>
