--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -72,3 +72,5 @@
          <p>&copy;2020 | Isabel Aranguren | Houston| <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
                 <div id="lastUpdated"></div>
     </footer>
+</body>
+</html>
