--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <img class="logo" src="./icon2.png" height="50px" alt="logo">
-
         <h1>Weather Lot</h1>
     </header>
     <nav>
@@ -39,3 +38,5 @@
          <p>&copy;2020 | Isabel Aranguren | Houston| <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
                 <div id="lastUpdated"></div>
     </footer>
+    </body>
+    </html>
