--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -104,13 +104,12 @@
                 </p>
                 <a href="#">Read More...</a>
             </section>
-            <img class="articleImg" src="images/local.jpg" alt="green Idaho farm with tree and hills">
+            <img class="articleImg" src="images/local.jpg" alt="local hills">
             </div>
     </div>
     <div class="flex-container">
         <div class="flex-item">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1900.564918272261!2d-119.77131171002578!3d36.762015409085826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945de1549e4e9d%3A0x7b12406449a3b811!2sFresno%2C%20CA!5e0!3m2!1sen!2sus!4v1602974928678!5m2!1sen!2sus">
-            </iframe>
+            <img class="map" src="images/map.png" alt="map">
             <div class="contactInfo">
             <h3>Contact Info</h3>
             <p>The Weather Site</p>
