--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -53,8 +52,8 @@
             <p>Wind Speed: <span id="wind">5 mph </span></p>
       </section>
     </div>
-        <h2>5 day Forecast</h2>
     <section>
+        <h2>5 day Forecast</h2>
         <table class="forecast">
             <thead>
         <tr>
@@ -81,7 +80,6 @@
             </td>
         </tr>
             </tbody>
-            </tr>
             </table>
     </section>
     <div class="article_box">
@@ -109,8 +107,7 @@
     </div>
     <div class="flex-container">
         <div class="flex-item">
-            <img class="map" src="images/map.jpg">
-            </iframe>
+            <img class="map" src="images/map.jpg" alt='map'>
             <div class="contactInfo">
             <h3>Contact Info</h3>
             <p>The Weather Site</p>
