--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -67,7 +67,7 @@
             <tbody>
         <tr>
             <td>
-                <img class="favicon" src="images/sonne.png" alt="Sunny">
+                <img class="favicon" src="images/Sonne.png" alt="Sunny">
             </td>
             <td>
                 <img class="favicon" src="images/Sonne.png" alt="Sunny">
