--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -29,7 +29,7 @@
     <nav>
         <ul class="navigation">
         <li><a class="ham" href="#">&#9776;</a></li>
-          <li><a href="./preston-5.html">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
