--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/large.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico">
     <title> WDD 230: Assignment Portal Isabel Aranguren</title>
 </head>
 <body onload="main()">
