--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -89,7 +89,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
 <script src="js/menu.js"></script>
-<script src="js/app.js"></script>
+<script src="js/app.js" defer></script>
 <script src="js/date.js"></script>
 </body>
 </html>
