--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/large.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="shortcut icon" href="weatherIcon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <title> WDD 230: Assignment Portal Isabel Aranguren</title>
 </head>
 <body onload="main()">
@@ -19,7 +19,7 @@
     </div>
     <header>
         <picture>
-            <img src="images/icon2.png" alt="The world logo">
+            <img src="img/icon2.png" alt="The world logo">
         </picture>
         <section class="headings">
             <h1>Weather Lot</h1>
@@ -40,7 +40,7 @@
   <main>
     <form method="GET" action="thanks.html">
         <div id="stormcenter">
-           <h2>Share your weather experience</h2>
+           <h2>Share your weather experience!</h2>
            <fieldset>
               <legend>Personal Information</legend>
            <div class="formfield">
@@ -96,9 +96,9 @@
               <label>Comments: <textarea name="comments" id="comments"></textarea></label>
            </div>
         </fieldset>
-        <div class="center">
-           <input name="submit" id="submit" type="submit" value="Share your experience">
-        </div>
+         <input name="submit" id="submit" type="submit" value="Share your experience">
+         </div>
+      </form>
   </main>
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
