--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Lesson 05 <a href=../lesson5/preston-5.html>Link</a> </li>
             <li>Lesson 06 <a href=../lesson6/preston-6.html>Link</a></li>
             <li>Lesson 07 <a href=../lesson7/lazyload.html>Lazy Loading</a>|<a href=../lesson7/gallery-7.html>Gallery</a> </li>
-            <li>Lesson 08 <a href=../lesson8/tablebuild.html>Table</a>|<a href=#>Storm</a></li>
+            <li>Lesson 08 <a href=../lesson8/tablebuild.html>Table</a>|<a href=../lesson8/stormcenter.html>Storm</a></li>
 
         </ul>
     </main>
