--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -10,6 +10,9 @@
     <title>Table Build</title>
   </head>
   <body>
+    <header>
+      <h1>W08 🥑 Activity: Table Build</h1>
+    </header>
     <main>
       <table id="Sales">
         <caption>ACME Wildwest</caption>
