--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -30,7 +30,7 @@
         <ul class="navigation">
         <li><a class="ham" href="#">&#9776;</a></li>
           <li><a href="../index.html">Home</a></li>
-          <li><a class="nav-link" href="../lesson6/preston-6.html">Preston</a></li>
+          <li><a class="nav-link" href="#'>Preston</a></li>
           <li><a class="nav-link" href="">Soda Springs</a></li>
           <li><a class="nav-link" href="#">Fish Haven</a></li>
           <li><a class="nav-link" href="#">Storm Center</a></li>
