--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -109,6 +109,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/banner.js"></script>
 <script src="js/windchill.js"></script>
 <script src="js/app.js"></script>
 </body>
