--- a/lesson9/stormcenter.html
+++ b/lesson9/stormcenter.html
@@ -29,12 +29,12 @@
     <nav>
         <ul class="navigation">
           <li><a class="ham" href="#">&#9776;</a></li>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a class="nav-link" href="/preston-6.html">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
-          <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+          <li><a href="stormcenter.html">Storm Center</a></li>
+          <li><a href="gallery-9.html">Gallery</a></li>
         </ul>
     </nav>
   <main>
@@ -106,7 +106,6 @@
     <div id="box1">
     </div> 
 </footer>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
 <script src="js/banner.js"></script>
 <script src="js/menu.js"></script>
