--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -43,14 +43,8 @@
     </div>
     <div class="hero_box">
         <img class="hero" src="img/hero.jpg" alt="Clouds">
-    
     </div>
-    </section>
-    <section>
         <div class="cards"></div>
-    </section>
-</div>
-    </div>
     <div class="flex-container">
         <div class="flex-item">
             <img class="map" src="../lesson5/images/map.jpg" alt='map'>
@@ -67,10 +61,10 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <a href="/home-wireframe.html"
-    </div> 
+    <a href="/home-wireframe.html"></a>
 </footer>
 <script src="/lesson9/js/menu.js"></script>
 <script src="/lesson9/js/banner.js"></script>
+<script src="js/webfontload.js"></script>
 </body>
 </html>
