--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -61,7 +61,7 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <a href="home-wireframe.html">Wireframe</a>
+    <a href="home-wireframes.html">Wireframe</a>
 </footer>
 <script src="/lesson9/js/menu.js"></script>
 <script src="/lesson9/js/banner.js"></script>
