--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li>Lesson 07 <a href=../lesson7/lazyload.html>Lazy Loading</a>|<a href=../lesson7/gallery-7.html>Gallery</a> </li>
             <li>Lesson 08 <a href=../lesson8/tablebuild.html>Table</a>|<a href=../lesson8/stormcenter.html>Storm</a></li>
             <li>Lesson 09 <a href=../lesson9/prophets.html>JSON</a>|<a href=../lesson9/home.html>Home</a></li>
+            <li>Lesson 10 <a href=../lesson10/preston-10.html</a>Preston</li>
+
         </ul>
     </main>
     <footer>
