--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -30,7 +30,7 @@
         <ul class="navigation">
             <li><a class="ham" href="#">&#9776;</a></li>
               <li><a href="../index.html">Home</a></li>
-              <li><a class="nav-link active" href="#">Preston</a></li>
+              <li><a class="nav-link" href="preston-9.html">Preston</a></li>
               <li><a class="nav-link" href="#">Soda Springs</a></li>
               <li><a class="nav-link" href="#">Fish Haven</a></li>
               <li><a class="nav-link" href="stormcenter.html">Storm Center</a></li>
