--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -43,9 +43,9 @@
     </div>
     <div class="hero_box">
         <picture>
-            <source media="(min-width: 1024px)" srcset="./img/default.jpg">
-            <source media="(min-width: 768px)" srcset="./img/default-med.jpg">
-            <source media="(min-width: 658px)" srcset="./img/default-small.jpg">
+            <source media="(min-width: 1024px)" srcset="./img/haven-large.jpg">
+            <source media="(min-width: 768px)" srcset="./img/haven-med.jpg">
+            <source media="(min-width: 658px)" srcset="./img/haven-small.jpg">
 
             <img class="hero" src="./img/default.jpg" alt="Rainy Day">
           </picture>
@@ -104,24 +104,19 @@
 <div class="article_box">
     <div class="article">
         <section class="article_content">
-            <h3>Founder's Day Fresco</h3>
-            <p>John Doe</p>
+            <h3>Big Storm System Eyes Eastern U.S. To Close Out November</h3>
+            <p>Chad Merrill</p>
             <p id="article_text">
-                Aliquet risus feugiat in ante metus dictum. Libero enim sed faucibus turpis. 
-                Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Metus aliquam eleifend 
-                mi in. Adipiscing enim eu turpis egestas pretium aenean pharetra. Non curabitur 
-                gravida arcu ac tortor. Pretium nibh ipsum consequat nisl vel pretium. Convallis 
-                aenean et tortor at risus viverra adipiscing at. Egestas pretium aenean pharetra magna.
-                Libero nunc consequat interdum varius sit. Enim ut sem viverra aliquet eget sit.
-                Tincidunt dui ut ornare lectus sit amet est. Eget nulla facilisi etiam dignissim. 
-                Magnis dis parturient montes nascetur ridiculus mus. Sed vulputate mi sit amet mauris 
-                commodo quis imperdiet. Platea dictumst quisque sagittis purus sit amet volutpat. 
-                Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla
+                The eerily quiet weather pattern so far this holiday weekend will come to an abrupt end as
+                 the weekend draws to a close. An area of low pressure forming along the Gulf Coast will 
+                 bring strong winds, rain, the chance for gusty thunderstorms and even heavy snow as it 
+                 chugs up the Eastern Seaboard on Monday.
+                 The storm is the same one that has brought heavy rainfall to Houston today, and will push into the Southeast Sunday. The soggy weather will expand across the Lower Mississippi Valley into the Southeast.
 
             </p>
             <a href="#">Read More...</a>
         </section>
-        <img class="articleImg" src="img/local.jpg" alt="hills">
+        <img class="articleImg" src="img/fishhavenarticle.jpg" alt="Rain">
         </div>
 </div>
     <div class="flex-container">
