--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -46,7 +46,6 @@
             <source media="(min-width: 1024px)" srcset="./img/default.jpg">
             <source media="(min-width: 768px)" srcset="./img/default-med.jpg">
             <source media="(min-width: 658px)" srcset="./img/default-small.jpg">
-
             <img class="hero" src="./img/default.jpg" alt="Rainy Day">
           </picture>
     </div>
@@ -105,19 +104,13 @@
     <div class="article">
         <section class="article_content">
             <h3>Founder's Day Fresco</h3>
-            <p>John Doe</p>
+            <h4>John Dalia</h4>
             <p id="article_text">
-                Aliquet risus feugiat in ante metus dictum. Libero enim sed faucibus turpis. 
-                Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Metus aliquam eleifend 
-                mi in. Adipiscing enim eu turpis egestas pretium aenean pharetra. Non curabitur 
-                gravida arcu ac tortor. Pretium nibh ipsum consequat nisl vel pretium. Convallis 
-                aenean et tortor at risus viverra adipiscing at. Egestas pretium aenean pharetra magna.
-                Libero nunc consequat interdum varius sit. Enim ut sem viverra aliquet eget sit.
-                Tincidunt dui ut ornare lectus sit amet est. Eget nulla facilisi etiam dignissim. 
-                Magnis dis parturient montes nascetur ridiculus mus. Sed vulputate mi sit amet mauris 
-                commodo quis imperdiet. Platea dictumst quisque sagittis purus sit amet volutpat. 
-                Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla
+                Preston and surrounding counties dodged a real serious winter weather disaster. Unlike much of the North East, West Virginia was hit with a smaller storm which dumped anywhere from four to potentially six inches of snow and causing a handful of accidents and school delays.
 
+                According to the Preston County Office of Emergency Services, a few dozen vehicle wrecks and other weather related incidents were reported. Public Information Officer Clark Nicklow says the worst was actually on Saturday due to severe icy conditions on the roadways.
+                
+                “The ice caused a rash of accidents,” Nicklow said. “Everything king of happened around after dark but things starting clearing up pretty fast later in the evening.”
             </p>
             <a href="#">Read More...</a>
         </section>
