--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -23,7 +23,7 @@
         </picture>
         <section class="headings">
             <h1>Weather Lot</h1>
-            <div class="m">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div class="m"> Turn Around, Don't Drown</div>
         </section>
     </header>
     <nav>
