--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -104,19 +104,18 @@
 <div class="article_box">
     <div class="article">
         <section class="article_content">
-            <h3>Founder's Day Fresco</h3>
+            <h3>What Is Your Snowiest Month of the Year?</h3>
             <p>John Doe</p>
             <p id="article_text">
-                Aliquet risus feugiat in ante metus dictum. Libero enim sed faucibus turpis. 
-                Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Metus aliquam eleifend 
-                mi in. Adipiscing enim eu turpis egestas pretium aenean pharetra. Non curabitur 
-                gravida arcu ac tortor. Pretium nibh ipsum consequat nisl vel pretium. Convallis 
-                aenean et tortor at risus viverra adipiscing at. Egestas pretium aenean pharetra magna.
-                Libero nunc consequat interdum varius sit. Enim ut sem viverra aliquet eget sit.
-                Tincidunt dui ut ornare lectus sit amet est. Eget nulla facilisi etiam dignissim. 
-                Magnis dis parturient montes nascetur ridiculus mus. Sed vulputate mi sit amet mauris 
-                commodo quis imperdiet. Platea dictumst quisque sagittis purus sit amet volutpat. 
-                Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla
+                What month do you typically get the most snow?
+
+This should be an obvious answer; either December, January or February, right?
+
+Not necessarily.
+
+Alaska-based climatologist Dr. Brian Brettschneider examined monthly snowfall data from 4,218 observation sites across the United States which receive an annual average of at least 2 inches of snow.
+               of snowiest months of all U.S. reporting stations with at least 2 inches of snow. For example, March is the snowiest month for 377 reporting stations. In the case of a tie for the snowiest month, each tied month is counted for each station.
+The most common snowiest month among those sites is January, followed by December, then February. You can see this generally depicted in the map below that Brettschneider created.
 
             </p>
             <a href="#">Read More...</a>
