--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -120,7 +120,7 @@ The most common snowiest month among those sites is January, followed by Decembe
             </p>
             <a href="#">Read More...</a>
         </section>
-        <img class="articleImg" src="img/local.jpg" alt="hills">
+        <img class="articleImg" src="img/snow.jpg" alt="Snow field">
         </div>
 </div>
     <div class="flex-container">
