--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -114,7 +114,7 @@
             </p>
             <a href="#">Read More...</a>
         </section>
-        <img class="articleImg" src="img/local.jpg" alt="hills">
+        <img class="articleImg" src="img/rain.jpg" alt="rain">
         </div>
 </div>
     <div class="flex-container">
