--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 08 <a href=../lesson8/tablebuild.html>Table</a>|<a href=../lesson8/stormcenter.html>Storm</a></li>
             <li>Lesson 09 <a href=../lesson9/prophets.html>JSON</a>|<a href=../lesson9/home.html>Home</a></li>
             <li>Lesson 10 <a href=../lesson10/preston-10.html</a>Preston</li>
-            <li>Lesson 11 <a href=../lesson11/home.html</a>Weather Lot</li>
+            <li>Lesson 11 <a href=../lesson11/home.html>Link</a>Weather Lot</li>
 
 
         </ul>
