--- a/lesson11/home.html
+++ b/lesson11/home.html
@@ -49,6 +49,7 @@
             <img class="hero" src="./img/home-small.jpg" alt="Home hero">
           </picture>
     </div>
+     <section id="town-cards">
         <div class="cards"></div>
     </section>
     <div class="flex-container">
