--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -46,7 +46,7 @@
             <source media="(min-width: 1024px)" srcset="./img/default.jpg">
             <source media="(min-width: 768px)" srcset="./img/default-med.jpg">
             <source media="(min-width: 658px)" srcset="./img/default-small.jpg">
-            <img class="hero" src="./img/default.jpg" alt="Rainy Day">
+            <img class="hero" src="./img/default-small.jpg" alt="Rainy Day">
           </picture>
     </div>
     <section class="weather_summary">
