--- a/lesson11/home.html
+++ b/lesson11/home.html
@@ -68,7 +68,7 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <a href="home-wireframes.html"></a>
+    <a href="home-wireframes.html">Wireframes</a>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="/lesson11/js/app.js"></script>
