--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -135,8 +135,9 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <a href="home-wireframes.html"></a>
-</footer>
+    <a href="home-wireframes.html">Wireframes</a>
+
+    </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="/lesson11/js/app.js"></script>
 <script src="js/webfontload.js"></script>
