--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -83,8 +83,8 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <div id="box1">
-    </div> 
+    <a href="home-wireframes.html">Wireframes</a>
+     </div> 
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="/lesson11/js/app.js"></script>
