--- a/lesson11/home-wireframes.html
+++ b/lesson11/home-wireframes.html
@@ -17,6 +17,6 @@
         <li><a href="https://wireframe.cc/pro/edit/394952">Medium</a></li>
         <li><a href="https://wireframe.cc/pro/pp/5e3576061394949">Medium</a></li>    
     </ul>
-    <a href="index.html">Go Back</a>
+    <a href="home.html">Go Back</a>
 </body>
 </html>
