--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -103,8 +103,7 @@
  <footer>
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
-    <div id="box1">
-    </div> 
+    <a href="home-wireframes.html">Wireframes</a>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="/lesson11/js/app.js"></script>
