--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -140,6 +140,8 @@ The most common snowiest month among those sites is January, followed by Decembe
     <p>&copy; <span id="year"></span>Weather Lot | Attributions | Isabel Aranguren<br>
     <span id="currentDate"></span></p>
     <a href="home-wireframes.html"></a>
+    <a href="home-wireframes.html">Wireframes</a>
+
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="/lesson11/js/app.js"></script>
