--- a/scoots/confirmation.html
+++ b/scoots/confirmation.html
@@ -24,6 +24,7 @@
             <div class="media"><a href="wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
             <div class="media"><a href="wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
             <div class="media"><a href="wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
+         </div>
       </div>
     <nav>
         <ul class="navigation">
@@ -38,10 +39,9 @@
     <main id="main-contact">
         <section id="rentals-summary">
         <div class="town_box">
-            <h2>Thank you</h2>
-            We appreciate that you have taken the time to reach out to us.
+            <h2>Thank You For Your Order</h2>
+            <p>Please allow us 24 hours to process your order</p>
         </div>
-        
        </section>
        </main>
        <div class="footer">
