--- a/scoots/index.html
+++ b/scoots/index.html
@@ -44,7 +44,7 @@
        <section id="hero" class="hero-image">
          <div class="hero-text">
           <h1>Scoots Rentals</h1> 
-          <button>Make a Reservation</button>
+          <button><a href="reservations.html">Make a Reservation</a></button>
           </div>
        </section>
        <section id="weather">
