--- a/scoots/thanks.html
+++ b/scoots/thanks.html
@@ -21,9 +21,10 @@
          <div id="current"></div>
          <div id="humidity"></div>
          <div class="social-wrapper">
-            <div class="media"><a href="wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
-            <div class="media"><a href="wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
-            <div class="media"><a href="wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
+            <div class="media"><a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
+            <div class="media"><a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
+            <div class="media"><a href="https://wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
+         </div>
       </div>
     <nav>
         <ul class="navigation">
@@ -38,10 +39,9 @@
     <main id="main-contact">
         <section id="rentals-summary">
         <div class="town_box">
-            <h2>Thank you</h2>
-            We appreciate that you have taken the time to reach out to us.
+            <h2>Thank Your</h2>
+            <p>We appreciate that you have taken the time to reach out to us.</p>
         </div>
-        
        </section>
        </main>
        <div class="footer">
@@ -68,9 +68,9 @@
               </ul> 
       <!--   for social links -->
               <div class="social-media">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-google-plus-square"></i></a>
+                <a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a>
+                <a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a>
+                <a href="https://wwww.google.com"><i class="fab fa-google-plus-square"></i></a>
               </div> 
           </div>
         </div>
