--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -13,17 +12,21 @@
       <title>Scoots | Contact </title>
    </head>
    <body onload="main()">
-      <div id="banner" class="banner">
-         <div id="alerts">SCOOTS</div>
-     </div>
+    <header>
+    <picture>
+      <source media="(max-width: 500px)" srcset="/img/SCOOTS.png">
+      <source media="(max-width: 1000px)" srcset="/img/SCOOTS.png">
+      <img class="logo" src="img/SCOOTS.png" alt="Scoots Logo">
+  </picture> 
+</header> 
       <div class="weatherInfo">
          <div id="temp"></div>
          <div id="current"></div>
          <div id="humidity"></div>
          <div class="social-wrapper">
-            <div class="media"><a href="instagram.com"><i class="fab fa-instagram"></i></a></div>
-            <div class="media"><a href="facebook.com"><i class="fab fa-facebook"></i></a></div>
-            <div class="media"><a href="google.com"><i class="fab fa-google-plus-square"></i></a></div>
+            <div class="media"><a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
+            <div class="media"><a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
+            <div class="media"><a href="https://wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
          </div>
       </div>
     <nav>
