--- a/scoots/thanks.html
+++ b/scoots/thanks.html
@@ -21,9 +21,9 @@
          <div id="current"></div>
          <div id="humidity"></div>
          <div class="social-wrapper">
-            <div class="media"><a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
-            <div class="media"><a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
-            <div class="media"><a href="https://wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
+            <div class="media"><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
+            <div class="media"><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
+            <div class="media"><a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a></div>
          </div>
       </div>
     <nav>
@@ -68,9 +68,9 @@
               </ul> 
       <!--   for social links -->
               <div class="social-media">
-                <a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a>
-                <a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a>
-                <a href="https://wwww.google.com"><i class="fab fa-google-plus-square"></i></a>
+                <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.google.com"><i class="fab fa-google-plus-square"></i></a>
               </div> 
           </div>
         </div>
