--- a/scoots/index.html
+++ b/scoots/index.html
@@ -25,9 +25,9 @@
          <div id="current"></div>
          <div id="humidity"></div>
          <div class="social-wrapper">
-            <div class="media"><a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a></div>
-            <div class="media"><a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a></div>
-            <div class="media"><a href="https://wwww.twitter.com"><i class="fab fa-twitter"></i></a></div>
+            <div class="media"><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
+            <div class="media"><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
+            <div class="media"><a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a></div>
          </div>
       </div>
     <nav>
@@ -107,9 +107,9 @@
               </ul> 
       <!--   for social links -->
               <div class="social-media">
-                <a href="https://wwww.instagram.com"><i class="fab fa-instagram"></i></a>
-                <a href="https://wwww.facebook.com"><i class="fab fa-facebook"></i></a>
-                <a href="https://wwww.twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
               </div> 
           </div>
         </div>
