--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -39,9 +39,48 @@
           <li><a class="nav-link" href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <main>
-    
-       </main>
+      <main id="main_tours">
+      <div class="town_box">
+        <h1>Tours</h1>
+    </div>     
+        <div class="tour">
+          <figure>
+            <h2>Jeep Tour</h2>
+            <img src='img/placeholder2.png' data-src="./img/jeep.jpg" alt="Coastal Tour">
+            <figcaption class="tours">Our Custom Cozumel Jeep Tour is a private Jeep adventure in Cozumel Mexico, 
+              that allows you to create your own adventure with your own Private Guide & Jeep. 
+              We would never put our guests with anyone else, because our family understands 
+              you are looking for a more personalized experience.</figcaption>
+            </figure>
+            <figure>
+              <h2>Discover Scuba Cozumel</h2>
+              <img class="tour_img"  data-src="./img/scuba.jpg" alt="Scuba diving">
+              <figcaption class="tours">
+                We include all of your dive gear.You'll get professional guidance from our best PADI Dive Intructors who will teach 
+                you how to dive Cozumel with ease, while making it a fun and easy experience for anyone to enjoy. 
+                And an hour of real diving in Cozumel to discover the best reefs Cozumel has to offer.
+              </figcaption>
+            </figure>
+            <figure >
+              <h2> Snorkel by Boat  </h2>
+              <img class="tour_img" src="./img/coast.jpg" alt="Nature Tour">
+              <figcaption class="tours">
+                Stop at The Coolest Beach Club in Cozumel for a guided snorkeling from the 
+                shore at the famous Chankanaab area and savour a mouth-watering Mexican 
+                lunch before returning to your starting point.
+              </figcaption>
+            </figure>
+            <figure >
+              <h2>ATV Mud Kicking &    </h2>
+              <img class="tour_img" src="./img/atv.jpg" alt="Day long Jeep tour">
+              <figcaption class="tours">
+                Drive a Sahara Edition Jeep en route to El Cedral, a small town located in the center of the island and the first settlement in Cozumel.
+
+              </figcaption>
+            </figure>
+      
+</main>
+
        <div class="footer">
         <div class="inner-footer">
       <!--  for quick links  -->
