--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -32,11 +32,11 @@
     <nav>
         <ul class="navigation">
         <li><a class="ham" href="#">&#9776;</a></li>
-          <li><a class="nav-link active" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="index.html">Home</a></li>
           <li><a class="nav-link" href="rentals.html">Rentals</a></li>
           <li><a class="nav-link" href="tours.html">Tours</a></li>
           <li><a class="nav-link" href="reservations.html">Reservations</a></li>
-          <li><a class="nav-link" href="contact.html">Contact Us</a></li>
+          <li><a class="nav-link active" href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
     <main id="main-contact">
