--- a/bookstore/login.html
+++ b/bookstore/login.html
@@ -21,7 +21,7 @@
   </div>
 <header>
   <div class="topnav">
-    <a class="brand" href="#home">BOOKSTORE</a>
+    <a class="brand" href="home.html">BOOKSTORE</a>
       <a class="right" href="login.html">My Account</a>
       <div class="search-container">
       <form action="/action_page.php">
